обновил docker compose

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,63 +1,56 @@
 user nextjs;
-worker_processes auto;
-error_log /var/log/nginx/error.log warn;
+worker_processes 1;
+error_log /var/log/nginx/error.log error;
 pid /var/run/nginx.pid;
 
 events {
-    worker_connections 1024;
+    worker_connections 256;
     use epoll;
-    multi_accept on;
+    multi_accept off;
 }
 
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Логирование
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-    access_log /var/log/nginx/access.log main;
+    access_log off;
 
-    # Оптимизация производительности
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
-    client_max_body_size 16M;
+    keepalive_timeout 30;
+    types_hash_max_size 1024;
+    client_max_body_size 8M;
+    
+    client_body_buffer_size 16K;
+    client_header_buffer_size 1k;
+    large_client_header_buffers 2 1k;
+    output_buffers 1 32k;
+    postpone_output 1460;
 
-    # Gzip сжатие
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
     gzip_proxied any;
-    gzip_comp_level 6;
+    gzip_comp_level 4;
     gzip_types
         text/plain
         text/css
-        text/xml
         text/javascript
         application/json
         application/javascript
         application/xml+rss
-        application/atom+xml
         image/svg+xml;
 
-    # Кэширование статических файлов
     map $sent_http_content_type $expires {
         "text/html"                 epoch;
-        "text/css"                  max;
-        "application/javascript"    max;
-        "image/png"                 max;
-        "image/jpg"                 max;
-        "image/jpeg"                max;
-        "image/gif"                 max;
-        "image/webp"                max;
-        "image/svg+xml"             max;
-        "font/woff"                 max;
-        "font/woff2"                max;
-        default                     off;
+        "text/css"                  1y;
+        "application/javascript"    1y;
+        "image/png"                 1y;
+        "image/jpg"                 1y;
+        "image/jpeg"                1y;
+        "image/svg+xml"             1y;
+        default                     1d;
     }
 
     server {
@@ -66,54 +59,23 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
-        # Expires headers
         expires $expires;
 
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-Content-Type-Options "nosniff";
 
-        # Обработка SPA роутинга
         location / {
             try_files $uri $uri/ /index.html;
         }
 
-        # Статические ресурсы
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
-            access_log off;
         }
 
-        # API проксирование (если нужно)
-        location /api/ {
-            proxy_pass https://api.pizzanat.ru/api/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        # Здоровье контейнера
         location /health {
-            access_log off;
-            return 200 "healthy\n";
+            return 200 "OK";
             add_header Content-Type text/plain;
-        }
-
-        # Статус Nginx для мониторинга
-        location /nginx_status {
-            stub_status on;
-            access_log off;
-            allow 172.20.0.0/16;  # Только для Docker сети
-            deny all;
         }
     }
 } 
