--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 
 services:
-  # Основное приложение PizzaNat Web для Timeweb Cloud Apps
+  # Основное приложение PizzaNat Web для Timeweb Cloud Apps (оптимизировано для 1GB RAM)
   pizzanat-web:
     build:
       context: .
@@ -11,57 +11,62 @@ services:
     restart: unless-stopped
     ports:
       - "3000:3000"
+
+    # Ограничения ресурсов для сервера 1GB RAM
+    deploy:
+      resources:
+        limits:
+          memory: 512M # Максимум 512MB для контейнера
+          cpus: "0.5" # Максимум 50% CPU
+        reservations:
+          memory: 256M # Минимум 256MB
+          cpus: "0.25" # Минимум 25% CPU
+
+    # Минимальный набор переменных окружения
     environment:
-      # Node Environment
+      # Node Environment (оптимизация памяти)
       - NODE_ENV=production
+      - NODE_OPTIONS=--max-old-space-size=256
 
-      # API Configuration
+      # API Configuration (только необходимое)
       - VITE_API_URL=https://api.pizzanat.ru/api/v1
-      - VITE_API_TIMEOUT=10000
+      - VITE_API_TIMEOUT=15000
 
-      # App Configuration
+      # App Configuration (базовое)
       - VITE_APP_NAME=PizzaNat
       - VITE_APP_VERSION=1.0.0
       - VITE_APP_DESCRIPTION=Лучшая пицца в городе - заказывайте онлайн!
 
       # Domain Configuration
       - VITE_DOMAIN=pizzanat.ru
-      - VITE_WWW_DOMAIN=www.pizzanat.ru
 
-      # Security
+      # Security (минимум)
       - VITE_ENABLE_HTTPS=true
       - VITE_SECURE_COOKIES=true
 
-      # Analytics
-      - VITE_YANDEX_METRIKA_ID=your_metrika_id_here
-      - VITE_GOOGLE_ANALYTICS_ID=your_ga_id_here
-
-      # Features
-      - VITE_ENABLE_PWA=true
-      - VITE_ENABLE_NOTIFICATIONS=true
-      - VITE_ENABLE_GEOLOCATION=true
-
-      # Payment
-      - VITE_YUKASSA_SHOP_ID=your_yukassa_shop_id
-      - VITE_PAYMENT_REDIRECT_URL=https://pizzanat.ru/payment/callback
-
-      # Social Media
-      - VITE_TELEGRAM_BOT_URL=https://t.me/pizzanat_bot
-      - VITE_VK_GROUP_URL=https://vk.com/pizzanat
-      - VITE_INSTAGRAM_URL=https://instagram.com/pizzanat
-
-      # Contact Info
-      - VITE_PHONE=+7(999)123-45-67
-      - VITE_EMAIL=info@pizzanat.ru
-      - VITE_ADDRESS=г. Москва, ул. Примерная, д. 123
-
-      # Build Optimization
+      # Build Optimization (экономия ресурсов)
       - VITE_BUILD_SOURCEMAP=false
       - VITE_BUILD_MINIFY=true
-      - VITE_BUILD_CHUNKS=true
+      - VITE_BUILD_CHUNKS=false # Отключаем chunking для экономии памяти
+
+    # Оптимизированный healthcheck (реже проверки)
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+      test:
+        [
+          "CMD-SHELL",
+          "wget --no-verbose --tries=1 --spider http://localhost:3000/ || exit 1",
+        ]
+      interval: 60s # Увеличили интервал
+      timeout: 5s # Уменьшили таймаут
+      retries: 2 # Меньше попыток
+      start_period: 30s # Меньше времени ожидания
+
+    # Настройки для экономии ресурсов
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m" # Максимум 10MB логов
+        max-file: "2" # Только 2 файла логов
+
+    # Отключаем swap для контейнера
+    mem_swappiness: 0
