--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -16,7 +16,7 @@ services:
       - NODE_ENV=production
 
       # API Configuration
-      - VITE_API_URL=https://api.pizzanat.ru/api/v1
+      - VITE_API_URL=https://api.dimbopizza.ru/api/v1/
       - VITE_API_TIMEOUT=10000
 
       # App Configuration
