--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - NODE_OPTIONS=--max-old-space-size=256
 
       # API Configuration (только необходимое)
-      - VITE_API_URL=https://api.pizzanat.ru/api/v1
+      - VITE_API_URL=https://api.dimbopizza.ru/api/v1/
       - VITE_API_TIMEOUT=15000
 
       # App Configuration (базовое)
