рабочая версия сайта 1.0.0 приводим к стилю мобильного приложения 6

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 worker_processes 1;
-error_log /var/log/nginx/error.log error;
-pid /var/run/nginx.pid;
+error_log /tmp/nginx_error.log error;
+pid /tmp/nginx.pid;
 
 events {
     worker_connections 256;
@@ -11,6 +11,13 @@ events {
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
+
+    # Временные директории
+    client_body_temp_path /tmp/nginx_client_temp;
+    proxy_temp_path /tmp/nginx_proxy_temp;
+    fastcgi_temp_path /tmp/nginx_fastcgi_temp;
+    uwsgi_temp_path /tmp/nginx_uwsgi_temp;
+    scgi_temp_path /tmp/nginx_scgi_temp;
 
     access_log off;
 
@@ -55,13 +62,20 @@ http {
     server {
         listen 3478;
         server_name _;
-        root /usr/share/nginx/html;
+        root /app/dist;
         index index.html;
 
         expires $expires;
 
         add_header X-Frame-Options "SAMEORIGIN";
         add_header X-Content-Type-Options "nosniff";
+
+        # Файлы верификации поисковых систем
+        location ~ ^/(yandex_[a-zA-Z0-9]+\.html|google[a-zA-Z0-9]*\.html|BingSiteAuth\.xml|robots\.txt|sitemap\.xml)$ {
+            try_files $uri =404;
+            expires 7d;
+            add_header Cache-Control "public";
+        }
 
         location / {
             try_files $uri $uri/ /index.html;
