рабочая версия сайта 1.0.1 изменинил порт "3478:3478"

--- a/nginx.conf
+++ b/nginx.conf
@@ -60,7 +60,7 @@ http {
     }
 
     server {
-        listen 80;
+        listen 3478;
         server_name _;
         root /app/dist;
         index index.html;
@@ -69,6 +69,10 @@ http {
 
         add_header X-Frame-Options "SAMEORIGIN";
         add_header X-Content-Type-Options "nosniff";
+        
+        # Настройки для работы за Timeweb Cloud Apps proxy
+        real_ip_header X-Forwarded-For;
+        set_real_ip_from 0.0.0.0/0;
 
         # Файлы верификации поисковых систем
         location ~ ^/(yandex_[a-zA-Z0-9]+\.html|google[a-zA-Z0-9]*\.html|BingSiteAuth\.xml|robots\.txt|sitemap\.xml)$ {
