--- a/docker-compose.timeweb.yml
+++ b/docker-compose.timeweb.yml
@@ -1,66 +1,100 @@
-# Docker Compose специально для Timeweb Cloud Apps
-# Этот файл оптимизирован под требования облачной платформы Timeweb
-
 version: "3.8"
 
+# Docker Compose конфигурация для Timeweb Cloud Apps
+# Особенности Timeweb:
+# ✅ Автоматический Nginx с SSL
+# ✅ Автоматический домен + возможность своего  
+# ✅ Переменные через панель управления
+# ❌ Volumes не сохраняются
+# ❌ Порты 80/443 зарезервированы (используем 3478)
+# ❌ Только первый сервис проксируется
+
 services:
-  # ДИМБО Пицца - основное приложение для Timeweb Cloud Apps
-  app:
+  # ДИМБО Пицца Web для Timeweb Cloud Apps
+  dimbopizza-web:
     build:
       context: .
       dockerfile: Dockerfile
       target: production
+    container_name: dimbopizza-web
+    restart: unless-stopped
     
-    # Timeweb Cloud Apps автоматически проксирует на основной домен
+    # Порт для Timeweb (80/443 зарезервированы платформой)
     ports:
       - "3478:3478"
-
-    # Переменные окружения (настраиваются в панели Timeweb)
+    
     environment:
+      # Production Environment
       - NODE_ENV=production
       - NODE_OPTIONS=--max-old-space-size=512
       
-      # API
+      # API Configuration
       - VITE_API_URL=https://api.dimbopizza.ru/api/v1/
+      - VITE_API_TIMEOUT=15000
       
-      # App Info
+      # App Configuration
       - VITE_APP_NAME=ДИМБО Пицца
-      - VITE_APP_VERSION=1.0.0
+      - VITE_APP_VERSION=1.0.9
+      - VITE_APP_DESCRIPTION=Лучшая пицца в Волжске - заказывайте онлайн!
       
-      # Домен (будет автоматически установлен Timeweb)
-      - VITE_DOMAIN=${DOMAIN}
+      # Domain Configuration (устанавливается через Timeweb панель)
+      - VITE_DOMAIN=${DOMAIN:-dimbopizza.ru}
+      - VITE_WWW_DOMAIN=${WWW_DOMAIN:-www.dimbopizza.ru}
       
-      # Analytics (задайте в панели Timeweb)
+      # Security (HTTPS управляется Timeweb)
+      - VITE_ENABLE_HTTPS=true
+      - VITE_SECURE_COOKIES=true
+      
+      # Analytics (задается через переменные Timeweb)
       - VITE_YANDEX_METRIKA_ID=${VITE_YANDEX_METRIKA_ID}
+      - VITE_GOOGLE_ANALYTICS_ID=${VITE_GOOGLE_ANALYTICS_ID}
       
-      # Telegram
-      - VITE_TELEGRAM_BOT_NAME=${VITE_TELEGRAM_BOT_NAME}
-      - VITE_TELEGRAM_WEBAPP_URL=${VITE_TELEGRAM_WEBAPP_URL}
+      # Telegram Web App
+      - VITE_TELEGRAM_BOT_NAME=${VITE_TELEGRAM_BOT_NAME:-DimboPizzaBot}
+      - VITE_TELEGRAM_BOT_URL=${VITE_TELEGRAM_BOT_URL:-https://t.me/DimboPizzaBot}
+      - VITE_TELEGRAM_WEBAPP_URL=${VITE_TELEGRAM_WEBAPP_URL:-https://dimbopizza.ru}
+      - VITE_TELEGRAM_ENABLED=${VITE_TELEGRAM_ENABLED:-true}
       
-      # Контакты (задайте в панели)
-      - VITE_PHONE=${VITE_PHONE}
-      - VITE_EMAIL=${VITE_EMAIL}
-      - VITE_ADDRESS=${VITE_ADDRESS}
+      # Contact Info
+      - VITE_PHONE=${VITE_PHONE:-+7902-105-34-34}
+      - VITE_EMAIL=${VITE_EMAIL:-info@dimbopizza.ru}
+      - VITE_ADDRESS=${VITE_ADDRESS:-ул.Шестакова, д.1Б, г. Волжск, Республика Марий Эл}
       
-      # Платежи
-      - VITE_YUKASSA_SHOP_ID=${VITE_YUKASSA_SHOP_ID}
+      # Payment & Maps
+      - VITE_PAYMENT_REDIRECT_URL=${VITE_PAYMENT_REDIRECT_URL:-https://dimbopizza.ru/payment/callback}
+      - VITE_YANDEX_MAPS_API_KEY=${VITE_YANDEX_MAPS_API_KEY}
       
       # Features
       - VITE_ENABLE_PWA=true
-      - VITE_ENABLE_HTTPS=true
+      - VITE_ENABLE_NOTIFICATIONS=true
+      - VITE_ENABLE_GEOLOCATION=true
+      
+      # Delivery Configuration
+      - VITE_DELIVERY_CITY=Волжск
+      - VITE_DELIVERY_ZONES_ENABLED=true
+      
+      # Build Optimization
+      - VITE_BUILD_SOURCEMAP=false
+      - VITE_BUILD_MINIFY=true
+      - VITE_BUILD_CHUNKS=true
 
-    # Health check
+    # Health check для Timeweb
     healthcheck:
-      test: ["CMD-SHELL", "wget --spider http://localhost:3478/health || exit 1"]
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3478/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 60s
+      start_period: 30s
 
-# Особенности Timeweb Cloud Apps:
-# ✅ Автоматический Nginx с SSL
-# ✅ Автоматический домен + возможность своего
-# ✅ Переменные через панель управления
-# ❌ Volumes не сохраняются
-# ❌ Порты 80/443 зарезервированы
-# ❌ Только первый сервис проксируется
+    # Настройки логирования для Timeweb
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+# Важно: Timeweb Cloud Apps автоматически:
+# - Добавляет SSL сертификат
+# - Настраивает домен
+# - Проксирует запросы на первый сервис
+# - Управляет переменными окружения через панель
