--- a/nginx/dev-proxy.conf
+++ b/nginx/dev-proxy.conf
@@ -26,14 +26,14 @@ server {
         
         # CORS заголовки
         proxy_hide_header 'Access-Control-Allow-Origin';
-        add_header 'Access-Control-Allow-Origin' 'http://localhost' always;
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:8080' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
         
         # Preflight запросы
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'http://localhost' always;
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:8080' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
             add_header 'Access-Control-Max-Age' 1728000 always;
